@@ -1,4 +1,5 @@
 0.02
+ - Add examples directory.
 
 0.01 2015-02-06T16:15:04+01:00
  - First version.
